--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Poppins&display=swap"
+        rel="stylesheet">
     <title>developer protpolio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to </h1>
+            <h1><span class="orange-color">Nizam uddin</span> Faihan</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You Might Saw me jumpin. climbing and stopping train, But nobody mef a alime for that work, That's why I
+                am
+                learning and mastering web development, I will not stop until I become the Web Development Here.</p>
+            <a class="link-button" target="_blank" href="https://nizamuddin15bd.github.io/developer-protpolio/">HIRE
+                ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
