--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to </h1>
             <h1><span class="orange-color">Nizam uddin</span> Faihan</h1>
@@ -29,7 +29,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -39,6 +39,26 @@
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
                 to make simple website, My gool is to build 3eebsites an learn advanced topics</p>
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experiences">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Web Developer</h1>
+                <h3>2021-present| Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Jacascript, I know everything needed to make a website function,
+                    effcient, I didn't stop with the web, I went beyond with most popular javascipt fromwork colled vue
+                    JS.
+                    I even know the deploment server and security. I will give you 100% web solution</p>
+            </div>
+            <div class="half-width">
+                <h1>Baby Web Developer</h1>
+                <h3>2020-2021| Programing Hero Learner</h3>
+                <p>THey didn't offer me a job. But I mode myself as a remove Web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content it was fun working at Progamming Hero</p>
+            </div>
         </div>
     </section>
 </body>
