--- a/index.html
+++ b/index.html
@@ -41,26 +41,29 @@
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
-    <section class="experiences">
+    <section class="experiences-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width">
-                <h1>Full Stack Web Developer</h1>
-                <h3>2021-present| Pro Level Developer</h3>
+            <div id="web-dev-experience" class="experiences-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2021-present| Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Jacascript, I know everything needed to make a website function,
                     effcient, I didn't stop with the web, I went beyond with most popular javascipt fromwork colled vue
                     JS.
                     I even know the deploment server and security. I will give you 100% web solution</p>
             </div>
-            <div class="half-width">
-                <h1>Baby Web Developer</h1>
-                <h3>2020-2021| Programing Hero Learner</h3>
+            <div id="full-dev-experience" class="experiences-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2020-2021| Programing Hero Learner</h3>
                 <p>THey didn't offer me a job. But I mode myself as a remove Web developer. I made their website and
                     showed
                     it to them. They liked it. And uploaded the content it was fun working at Progamming Hero</p>
             </div>
         </div>
     </section>
+    <footer>
+        <p>&#169 Peter Parker 2022, a programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
